<resources>
    <string name="app_name">OurGame</string>
    <string name="title_activity_main2">Leanback Main2Activity Title</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">Username already taken</string>
    <string name="drawing_guess_message">Type Guess Here</string>
    <string name="got_it_button">OK, got it!</string>
    <string name="enter_button">Enter</string>
    <string name="continue_button">Continue</string>
    <string name="reaction_game">Reaction</string>
    <string name="tile_game">Tile Game</string>
    <string name="picture_game">Picture Game</string>
    <string name="runner_game">Runner Game</string>

    <!-- Error messages -->
    <string name="password_empty">Password cannot be empty</string>
    <string name="login_error">Wrong Password or wrong username</string>
    <string name="preference_file_login">com.example.ourgame.login</string>
    <string name="preference_file_points">com.example.ourgame.points</string>
    <string name="preference_file_time">com.example.ourgame.time</string>
    <string name="preference_file_ranking">com.example.ourgame.ranking</string>
    <string name="preference_file_lastgame">com.example.ourgame.lastgame</string>
    <string name="preference_file_user">com.example.ourgame.user</string>
    <string name="username_empty">Username cannot be empty</string>

    <!--Game and menu text-->
    <string name="main_menu_button">Main Menu</string>
    <string name="exclamation">!</string>
    <string name="too_soon">Too Soon!</string>
    <string name="go">Go!</string>
    <string name="ms">ms</string>
    <string name="reaction_intro">When the screen turns green, tap as quickly as you can.</string>
    <string name="wait">Wait…</string>
    <string name="wait_french">Attendez…</string>
    <string name="reaction_game_french">Temps de réaction</string>
    <string name="reaction_intro_french">Lorsque l\'écran devient vert, tapez aussi vite que possible.</string>
    <string name="go_french">Aller!</string>
    <string name="too_soon_french">Trop tôt</string>
    <string name="press_any_key_french">Appuyez sur pour continuer</string>
    <string name="incorrect">INCORRECT!</string>
    <string name="correct">CORRECT!</string>
    <string name="passed_round">You passed this round!</string>
    <string name="memoryGame">Memory Game</string>
    <string name="language">Language</string>
    <string name="changeColor">Change Background Color</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="start">Start!</string>
    <string name="instructions">Instructions</string>
    <string name="avoiding_the_incorrect_ones">avoiding the incorrect ones.</string>
    <string name="incorrect_tile">incorrect tile</string>
    <string name="memory_game">Memory Game</string>
    <string name="unflipped_tile">unflipped tile</string>
    <string name="flipped_correct_tile">flipped correct tile</string>
    <string name="preference_file_language">com.example.ourgame.language</string>
    <string name="resultText">You win!</string>
    <string name="no_more_attempts">No more attempts left :(</string>
    <string name="start_new_game">START NEW GAME</string>
    <string name="resume_game">RESUME GAME</string>
    <string name="check_stats">CHECK STATISTICS</string>
    <string name="title_activity_settings">Settings</string>
    <string name="personal_rank">Your Rank:</string>
    <string name="default_points">0</string>
    <string name="points">Points</string>
    <string name="playtime">Play Time</string>
    <string name="user">User</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="default_user">No One</string>
    <string name="ranking">Ranking</string>
    <string name="back">Back</string>

    <string-array name="qwerty_keyboard">

        <item>Q</item>
        <item>W</item>
        <item>E</item>
        <item>R</item>
        <item>T</item>
        <item>Y</item>
        <item>U</item>
        <item>I</item>
        <item>O</item>
        <item>P</item>
        <item>A</item>
        <item>S</item>
        <item>D</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>Z</item>
        <item>X</item>
        <item>C</item>
        <item>V</item>
        <item>B</item>
        <item>N</item>
        <item>M</item>

    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="you_completed_every_level">You Completed Every Level!</string>
    <string name="game_over">Game Over</string>
    <string name="preference_file_theme">com.example.ourgame.theme</string>
    <string name="h">after game</string>
    <string name="preference_file_character">com.example.ourgame.character</string>
    <string name="win_result">You win!</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="default_hangman_blanks">_ _ _ _ s a s _</string>
    <string name="hangman_title">Hangman</string>
    <string name="default_game_title">Game Title</string>
    <string name="play_button">play</string>
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="five">5.</string>
    <string name="rank_by">Rank by:</string>
    <string name="picture">Picture</string>
    <string name="default_welcome_message">Welcome, (username)!</string>
    <string name="main_menu_reminder">For testing only (DELETE when done)</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="running">Running</string>
    <string name="hangman">Hangman</string>
    <string name="tile">Tile</string>
    <string name="number_of_attempts">Number of Attempts:</string>
    <string name="default_ready_message">Ready Message</string>
    <string name="reaction_time">Reaction Time</string>
    <string name="default_num_levels">0/5</string>
    <string name="default_average_time">0ms</string>
    <string name="theme">Theme</string>
    <string name="change_character">change character</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="default_username">username</string>
    <string name="ranking_label">Ranking:</string>
    <string name="points_label">Total Points:</string>
    <string name="playtime_label">Total Playtime:</string>
    <string name="default_lives_remaining">Lives Remaining: 3/3</string>
    <string name="clear_data">clear data</string>
</resources>
