<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainactivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menus.MainActivity">

    <Button
        android:id="@+id/pictureGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/renner"
        android:onClick="playPictureGame"
        android:text="@string/picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangmanGameButton" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/renner"
        android:text="@string/default_welcome_message"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/reminderText"
        android:layout_width="145dp"
        android:layout_height="47dp"
        android:layout_marginTop="172dp"
        android:fontFamily="@font/renner"
        android:text="@string/main_menu_reminder"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/renner"
        android:text="@string/default_game_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/renner"
        android:onClick="playGame"
        android:text="@string/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <Button
        android:id="@+id/statisticsButton"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/renner"
        android:onClick="checkStats"
        android:text="@string/statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <Button
        android:id="@+id/leaderBoardButton"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/renner"
        android:onClick="checkLeaderBoard"
        android:text="@string/leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statisticsButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/renner"
        android:onClick="openSettings"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderBoardButton" />

    <Button
        android:id="@+id/runningGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/renner"
        android:onClick="playRunningGame"
        android:text="@string/running"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderText" />

    <Button
        android:id="@+id/hangmanGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/renner"
        android:onClick="playHangmanGame"
        android:text="@string/hangman"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runningGameButton" />

    <Button
        android:id="@+id/tileGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/renner"
        android:onClick="playTileGame"
        android:text="@string/tile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureGameButton" />

    <Button
        android:id="@+id/reactionGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/renner"
        android:onClick="playReactionGame"
        android:text="@string/reaction_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tileGameButton"
        app:layout_constraintVertical_bias="0.008" />

    <ImageView
        android:id="@+id/characterImage"
        android:layout_width="83dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toEndOf="@+id/titleText"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/settingsIcon"
        android:layout_width="25dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:tint="#606060"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderBoardIcon"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gear" />

    <ImageView
        android:id="@+id/leaderBoardIcon"
        android:layout_width="25dp"
        android:layout_height="38dp"
        android:tint="#606060"
        app:layout_constraintEnd_toStartOf="@+id/leaderBoardButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trophyIcon"
        app:srcCompat="@drawable/leaderboards_complex" />

    <ImageView
        android:id="@+id/trophyIcon"
        android:layout_width="25dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:tint="#606060"
        app:layout_constraintEnd_toStartOf="@+id/statisticsButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playIcon"
        app:srcCompat="@drawable/trophy" />

    <ImageView
        android:id="@+id/playIcon"
        android:layout_width="25dp"
        android:layout_height="38dp"
        android:layout_marginTop="48dp"
        android:scaleY="0.8"
        android:tint="#606060"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:srcCompat="@drawable/right" />

</androidx.constraintlayout.widget.ConstraintLayout>